added animation externally

--- a/pendulum_simulation.ipynb
+++ b/pendulum_simulation.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -3028,7 +3028,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3112,6 +3112,18 @@
     "anim = animation.FuncAnimation(fig, animate , init_func=init,\n",
     "                               frames=n_frames ,interval= int( 1000/fps ), blit=True)\n",
     "HTML(anim.to_html5_video())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save the animation\n",
+    "Writer = animation.writers['ffmpeg']\n",
+    "writer = Writer(fps=fps, metadata=dict(artist='Me'), bitrate=1800)\n",
+    "anim.save('pendulum_animation.mp4', writer=writer)"
    ]
   }
  ],
